# Sample-App

./: README.md
hrpayroll-app/: .gitignore  README.md  docker-compose.yml
hrpayroll-app/backend/: .env.example  Dockerfile  auth.py  config.py  crud.py  database.py  init_db.sql  main.py  models.py  pyproject.toml  requirements.txt  schemas.py
hrpayroll-app/backend/routes/: __init__.py  auth.py  departments.py  employees.py  payroll.py
hrpayroll-app/frontend/: index.html  package.json  tailwind.config.js  vite.config.js
hrpayroll-app/frontend/src/: App.vue  main.js
hrpayroll-app/frontend/src/assets/: main.css
hrpayroll-app/frontend/src/components/: Accordion.vue  Alert.vue  Avatar.vue  Badge.vue  Breadcrumb.vue  Button.vue  Calendar.vue  Card.vue  Carousel.vue  Chart.vue  Checkbox.vue  Collapse.vue  Container.vue  DataTable.vue  Dialog.vue  Divider.vue  Drawer.vue  Dropdown.vue  Empty.vue  FileUpload.vue  Flex.vue  Form.vue  FormInput.vue  Grid.vue  Link.vue  List.vue  Loading.vue  Menu.vue  Modal.vue  Notification.vue  Pagination.vue  Popover.vue  Portal.vue  Progress.vue  Radio.vue  Rating.vue  Select.vue  Sidebar.vue  Skeleton.vue  Slider.vue  (+12 more)
hrpayroll-app/frontend/src/router/: index.js
hrpayroll-app/frontend/src/stores/: auth.js
hrpayroll-app/frontend/src/views/: Attendance.vue  Dashboard.vue  Departments.vue  Employees.vue  Login.vue  NotFound.vue  Payroll.vue
